refactor: Deixa páginas em pt-br

--- a/src/templates/__base__.jinja
+++ b/src/templates/__base__.jinja
@@ -41,7 +41,7 @@
         {% block navbarNav required %}
         {% endblock navbarNav %}
         <form id="navbar-form" class="d-flex">
-          {{ submit('Clear Session', 'clear-session', 'btn-outline-danger') }}
+          {{ submit('Limpar Sessão', 'clear-session', 'btn-outline-danger') }}
         </form>
       </div>
     </nav>
