--- a/src/templates/tutorial.jinja
+++ b/src/templates/tutorial.jinja
@@ -11,41 +11,46 @@
 
 {% block content %}
   <div class="container">
-    <h2 class="mb-4">Tutorial SAFS</h2>
-    <ol class="mb-5">
-      <li>
-        <strong>Acesse a página de Configuração:</strong>
-        <br>
-        No menu superior, clique em <b>Config</b> para acessar as opções de configuração do sistema.
-      </li>
-      <li class="mt-3">
-        <strong>Selecione o diretório base:</strong>
-        <br>
-        Informe o caminho do diretório onde estão localizadas as simulações. Clique em <b>Get Metrics</b> para carregar as opções.
-      </li>
-      <li class="mt-3">
-        <strong>Configuração de diretórios e métricas:</strong>
-        <br>
-        Selecione os diretórios de simulação desejados e atribua rótulos se necessário. Escolha as métricas que deseja analisar.
-      </li>
-      <li class="mt-3">
-        <strong>Configuração dos gráficos:</strong>
-        <br>
-        Defina o tipo de gráfico, opções de visualização, cargas personalizadas e demais parâmetros conforme sua necessidade.
-      </li>
-      <li class="mt-3">
-        <strong>Gerar gráficos e exportar resultados:</strong>
-        <br>
-        Clique em <b>Generate Graphs</b> para gerar os gráficos ou em <b>Export Results</b> para exportar os resultados em XLSX.
-      </li>
-      <li class="mt-3">
-        <strong>Limpar sessão:</strong>
-        <br>
-        Use o botão <b>Clear Session</b> no menu para reiniciar as configurações e limpar dados temporários.
-      </li>
-    </ol>
+    <div class="mb-5">
+      <div>
+        <h4>Acesse a página de Configuração:</h4>
+        <p>
+          No menu superior, clique em <b>Configuração</b> para acessar as opções de configuração do sistema.
+        </p>
+      </div>
+      <div class="mt-4">
+        <h4>Selecione o diretório base:</h4>
+        <p>
+          Informe o caminho do diretório onde estão localizadas as simulações. Clique em <b>Obter Métricas</b> para carregar as opções.
+        </p>
+      </div>
+      <div class="mt-4">
+        <h4>Configuração de diretórios e métricas:</h4>
+        <p>
+          Selecione os diretórios de simulação desejados e atribua rótulos se necessário. Escolha as métricas que deseja analisar.
+        </p>
+      </div>
+      <div class="mt-4">
+        <h4>Configuração dos gráficos:</h4>
+        <p>
+          Defina o tipo de gráfico, opções de visualização, cargas personalizadas e demais parâmetros conforme sua necessidade.
+        </p>
+      </div>
+      <div class="mt-4">
+        <h4>Gerar gráficos e exportar resultados:</h4>
+        <p>
+          Clique em <b>Gerar Gráficos</b> para gerar os gráficos ou em <b>Exportar Resultados</b> para exportar os resultados em XLSX.
+        </p>
+      </div>
+      <div class="mt-4">
+        <h4>Limpar sessão:</h4>
+        <p>
+          Use o botão <b>Limpar Sessão</b> no menu para reiniciar as configurações e limpar dados temporários.
+        </p>
+      </div>
+    </div>
     <div class="alert alert-info">
-      <b>Dica:</b> Você pode salvar e carregar configurações usando os campos de <b>Input Configuration File</b> e <b>Output Configuration File</b>.
+      <b>Dica:</b> Você pode salvar e carregar configurações usando os campos de <b>Arquivo de Configuração de Entrada</b> e <b>Arquivo de Configuração de Saída</b>.
     </div>
   </div>
 {% endblock content %}
