ref: Muda capsize da barra de erro da linha

--- a/src/templates/config.jinja
+++ b/src/templates/config.jinja
@@ -239,16 +239,16 @@
                         name="legend-position",
                         selected=legend_position,
                         options=[
-                        ["none", "Nenhuma"],
-                        ["upper center", "Superior Centro (Padrão)"],
+                        ["none", "Nenhuma (Não exibir legenda)"],
                         ["upper left", "Superior Esquerda"],
+                        ["upper center", "Superior Centro (Padrão)"],
                         ["upper right", "Superior Direita"],
-                        ["lower center", "Inferior Centro"],
-                        ["lower left", "Inferior Esquerda"],
-                        ["lower right", "Inferior Direita"],
                         ["center left", "Centro Esquerda"],
+                        ["center", "Centro"],
                         ["center right", "Centro Direita"],
-                        ["center", "Centro"]
+                        ["lower left", "Inferior Esquerda"],
+                        ["lower center", "Inferior Centro"],
+                        ["lower right", "Inferior Direita"]
                         ]) }}
             {{ input(label="Âncora X (Padrão: 0.5):",
                         name="anchor-x", value=anchor_x,
