--- a/src/templates/home.jinja
+++ b/src/templates/home.jinja
@@ -19,7 +19,7 @@
   <div class="container mt-5">
     <h2>Primeiros Passos</h2>
     <p>
-      Para começar, acesse a seção <a href="{{ url_for('config.index') }}">Configuração</a> para definir seu diretório base e configurações.
+      Para começar, acesse a seção <a href="{{ url_for('generation.index') }}">Geração</a> para gerar gráficos e exportar resultados baseados nas configurações fornecidas.
     </p>
     <p>Em seguida, você pode gerar gráficos e exportar resultados usando as opções disponíveis.</p>
     <p>
