--- a/src/templates/generation.jinja
+++ b/src/templates/generation.jinja
@@ -272,6 +272,7 @@
                     <input id="load-{{ i }}"
                            type="number"
                            class="form-control form-control-sm text-bg-light"
+                           step="any"
                            name="load-list"
                            value="{{ load }}">
                   </div>
